# chess-bot

./: .pre-commit-config.yaml  Makefile  README.md  package-lock.json  package.json  start-dev.sh
backend/: README.md  main.py  pyproject.toml  ruff.toml  test_main.py
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/move/: route.ts
src/app/game/[seed]/[[...gameState]]/: page.tsx
src/components/: ChessBoard.tsx  ChessSquare.tsx  ColorSelection.tsx  ThemeProvider.tsx  ThemeSelector.tsx
src/utils/: boardState.test.ts  boardState.ts
